# sn-x-simulator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: architecture.md  assembly-language.md  python-api.md  static-analysis.md
snx/: __init__.py  analyzer.py  checker.py  cli.py  compiler.py  dataflow.py  encoding.py  parser.py  runner.py  simulator.py  trace.py  word.py
