[project]
name = "snx-simulator"
version = "0.2.4"
description = "sn/x architecture assembly code simulator"
requires-python = ">=3.11"
dependencies = []
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
snx = "snx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snx"]
